# photomatch

./: .gitignore  AboutFME.cpp  AboutFME.h  AboutFME.ui  CHANGELOG.md  CMakeLists.txt  DependencyInfoWidget.cpp  DependencyInfoWidget.h  FME.rc  FeatureMatchingEvaluation.pri.in  FeatureMatchingEvaluation.pro  GrountTruthBuilderProcess.cpp  GrountTruthBuilderProcess.h  INSTALL.md  KeyPointsLeft.txt  KeyPointsRight.txt  MainWindowFME.cpp  MainWindowFME.h  MainWindowFME.ui  ProgressDialog.cpp  ProgressDialog.h  README.md  config.pri.in  fme.pro  main.cpp  resources.qrc  ui_AboutFME.h  ui_MainWindowFME.h  ui_ProgressDialog.h
src/fme/core/: CMakeLists.txt  core.pro  features.h  image.cpp  image.h  preprocess.h  project.cpp  project.h  session.cpp  session.h  settings.cpp  settings.h  utils.cpp  utils.h
src/fme/process/: CMakeLists.txt  ExternalProcess.cpp  ExternalProcess.h  MultiProcess.cpp  MultiProcess.h  Process.cpp  Process.h  ProcessConcurrent.h  process.pro
src/fme/ui/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  CMakeLists.txt  CurvesViewerModel.cpp  CurvesViewerModel.h  CurvesViewerPresenter.cpp  CurvesViewerPresenter.h  CurvesViewerView.cpp  CurvesViewerView.h  DescriptorMatcherModel.cpp  DescriptorMatcherModel.h  DescriptorMatcherPresenter.cpp  DescriptorMatcherPresenter.h  DescriptorMatcherView.cpp  DescriptorMatcherView.h  FeatureExtractorModel.cpp  FeatureExtractorModel.h  FeatureExtractorPresenter.cpp  FeatureExtractorPresenter.h  FeatureExtractorView.cpp  FeatureExtractorView.h  GroundTruthModel.cpp  GroundTruthModel.h  GroundTruthPresenter.cpp  GroundTruthPresenter.h  GroundTruthView.cpp  GroundTruthView.h  HomographyViewerModel.cpp  HomographyViewerModel.h  HomographyViewerPresenter.cpp  HomographyViewerPresenter.h  HomographyViewerView.cpp  HomographyViewerView.h  MainWindowModel.cpp  MainWindowModel.h  MainWindowPresenter.cpp  MainWindowPresenter.h  MainWindowView.cpp  MainWindowView.h  (+41 more)
src/fme/widgets/: AcebsfWidget.cpp  AcebsfWidget.h  AgastWidget.cpp  AgastWidget.h  AkazeWidget.cpp  AkazeWidget.h  BriefWidget.cpp  BriefWidget.h  BriskWidget.cpp  BriskWidget.h  CLAHEWidget.cpp  CLAHEWidget.h  CMakeLists.txt  ClaheWidget.cpp  ClaheWidget.h  CmbfheWidget.cpp  CmbfheWidget.h  DaisyWidget.cpp  DaisyWidget.h  DecolorWidget.cpp  DecolorWidget.h  DescriptorMatcherWidget.cpp  DescriptorMatcherWidget.h  DheWidget.cpp  DheWidget.h  FaheWidget.cpp  FaheWidget.h  FastWidget.cpp  FastWidget.h  FmeWidget.h  FreakWidget.cpp  FreakWidget.h  GfttWidget.cpp  GfttWidget.h  HmclaheWidget.cpp  HmclaheWidget.h  HogWidget.cpp  HogWidget.h  KazeWidget.cpp  KazeWidget.h  (+36 more)
src/photomatch/core/: CMakeLists.txt  image.cpp  image.h  project.cpp  project.h  session.cpp  session.h  settings.cpp  settings.h  utils.cpp  utils.h
src/photomatch/process/: CMakeLists.txt  ExternalProcess.cpp  ExternalProcess.h  MultiProcess.cpp  MultiProcess.h  Process.cpp  Process.h  ProcessConcurrent.cpp  ProcessConcurrent.h
src/photomatch/ui/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  BatchModel.cpp  BatchModel.h  BatchPresenter.cpp  BatchPresenter.h  BatchView.cpp  BatchView.h  CMakeLists.txt  ComponentsManager.cpp  ComponentsManager.h  CurvesViewer.h  CurvesViewerModel.cpp  CurvesViewerModel.h  CurvesViewerPresenter.cpp  CurvesViewerPresenter.h  CurvesViewerView.cpp  CurvesViewerView.h  DescriptorMatcher.h  DescriptorMatcherModel.cpp  DescriptorMatcherModel.h  DescriptorMatcherPresenter.cpp  DescriptorMatcherPresenter.h  DescriptorMatcherView.cpp  DescriptorMatcherView.h  ExportFeatures.h  ExportFeaturesModel.cpp  ExportFeaturesModel.h  ExportFeaturesPresenter.cpp  ExportFeaturesPresenter.h  ExportFeaturesView.cpp  ExportFeaturesView.h  ExportMatches.h  ExportMatchesModel.cpp  ExportMatchesModel.h  ExportMatchesPresenter.cpp  ExportMatchesPresenter.h  ExportMatchesView.cpp  ExportMatchesView.h  (+92 more)
src/photomatch/widgets/: ASiftWidget.cpp  ASiftWidget.h  AcebsfWidget.cpp  AcebsfWidget.h  AgastWidget.cpp  AgastWidget.h  AkazeWidget.cpp  AkazeWidget.h  BoostWidget.cpp  BoostWidget.h  BriefWidget.cpp  BriefWidget.h  BriskWidget.cpp  BriskWidget.h  CMakeLists.txt  ClaheWidget.cpp  ClaheWidget.h  CmbfheWidget.cpp  CmbfheWidget.h  D2NetWidget.cpp  D2NetWidget.h  DaisyWidget.cpp  DaisyWidget.h  DecolorWidget.cpp  DecolorWidget.h  DescriptorMatcherWidget.cpp  DescriptorMatcherWidget.h  DheWidget.cpp  DheWidget.h  FaheWidget.cpp  FaheWidget.h  FastWidget.cpp  FastWidget.h  FreakWidget.cpp  FreakWidget.h  GfttWidget.cpp  GfttWidget.h  HmclaheWidget.cpp  HmclaheWidget.h  HogWidget.cpp  (+46 more)
test/core/: CMakeLists.txt  core.pri  core.pro
test/core/agastdetector/: agastdetector.pro  tst_agastdetector.cpp
test/core/akazedetectordescriptor/: CMakeLists.txt  akazedetectordescriptor.pro  tst_akazedetectordescriptor.cpp
test/core/briefdescriptor/: briefdetector.pro  tst_briefdescriptor.cpp
test/core/briskdetectordescriptor/: CMakeLists.txt  tst_briskdetectordescriptor.cpp
test/core/daisydescriptor/: CMakeLists.txt  daisydetector.pro  tst_daisydescriptor.cpp
test/core/fastdetector/: fastdetector.pro  tst_fastdetector.cpp
test/core/features/: CMakeLists.txt
test/core/freakdescriptor/: CMakeLists.txt  freakdescriptor.pro  tst_freakdescriptor.cpp
test/core/gfttdetector/: CMakeLists.txt  gfttdetector.pro  tst_gfttdetector.cpp
test/core/hogdescriptor/: hogdescriptor.pro  tst_hogdescriptor.cpp
test/core/image/: CMakeLists.txt  image.pro  tst_image.cpp
test/core/kazedetectordescriptor/: kazedetectordescriptor.pro  tst_kazedetectordescriptor.cpp
test/core/latchdescriptor/: CMakeLists.txt  latchdescriptor.pro  tst_latchdescriptor.cpp
test/core/luciddescriptor/: luciddescriptor.pro  tst_luciddescriptor.cpp
test/core/matches/: CMakeLists.txt
test/core/msddetector/: msddetector.pro  tst_msddetector.cpp
test/core/mserdetector/: mserdetector.pro  tst_mserdetector.cpp
test/core/orbdetectordescriptor/: CMakeLists.txt  orbdetectordescriptor.pro  (+1 more)
test/process/: CMakeLists.txt
test/ui/: CMakeLists.txt  ui.pro
test/widgets/: CMakeLists.txt  test.pro  widgets.pro  widgets_test.pri
(+983 files in other folders)
