add_subdirectory(mainwindowview)
add_subdirectory(newprojectview)
add_subdirectory(projectmodel)
add_subdirectory(settingsmodel)
add_subdirectory(settingsview)
add_subdirectory(newsessionview)
add_subdirectory(preprocessview)
add_subdirectory(exportfeaturesview)
#add_subdirectory(exportfeaturesmodel)